[package]
name = "dng-sdk-sys"
version = "0.1.0"
edition = "2021"
build = "build/main.rs"

[build-dependencies]
anyhow = "1.0.76"
bindgen = "0.69.1"
cc = { version = "1.0.83", features = ["parallel"] }
pkg-config = "0.3.28"

[dependencies]
xmp_toolkit = { features = ["crt_static"], git = "https://github.com/uttarayan21/xmp-toolkit-rs" }
libz-sys = { version = "1.1.12", features = ["static"] }

